--- a/templates/base.html
+++ b/templates/base.html
@@ -10,13 +10,13 @@
         <title>Heather Hope Camping</title>
         <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="static/assets/css/style.css" rel="stylesheet" />
+        <link  rel="stylesheet" href="{% static 'assets/css/style.css' %}" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top" id="mainNav">
             <div class="container px-4">
-                <a class="navbar-brand" href="#page-top">Home</a>
+                <a class="navbar-brand" href="{% url 'home' %}">Home</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ms-auto">
@@ -32,7 +32,7 @@
                         <a class="nav-link" href="{% url 'account_login' %}">Login</a>
                     </li>
                     {% endif %}
-                        <li class="nav-item"><a class="nav-link" href="">Book</a></li>
+                        <li class="nav-item"><a class="nav-link" href="{% url 'booking' %}">Book</a></li>
                         <li class="nav-item"><a class="nav-link" href="">Photos</a></li>
                         <li class="nav-item"><a class="nav-link" href="">Contact Us</a></li>
                     </ul>
