--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,7 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Heather Hope Camping</title>
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <!-- <link rel="icon" type="image/x-icon" href="{% static 'assets/css/style.css' %}" /> -->
         <!-- Core theme CSS (includes Bootstrap)-->
         <link  rel="stylesheet" href="{% static 'assets/css/style.css' %}" />
     </head>
@@ -58,9 +58,10 @@
         <footer class="py-5 bg-dark">
             <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
         </footer>
+        
         <!-- Bootstrap core JS-->
         <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"></script>
         <!-- Core theme JS-->
-        <script src="static/assets/js/script.js"></script>
+        <script src="{% static 'assets/js/script.js' %}" ></script>
     </body>
 </html>
