Beautifying and comments

--- a/templates/base.html
+++ b/templates/base.html
@@ -33,8 +33,6 @@
                     </li>
                     {% endif %}
                         <li class="nav-item"><a class="nav-link" href="{% url 'booking' %}">Book</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">Photos</a></li>
-                        <li class="nav-item"><a class="nav-link" href="">Contact Us</a></li>
                     </ul>
                 </div>
             </div>
@@ -44,7 +42,7 @@
             <div class="container px-4 text-center">
                 <h1 class="fw-bolder">Heather Hope Camping</h1>
                 <p class="lead">Camp in the North Yorkshire Moors</p>
-                <a class="btn btn-lg btn-light" href="#about">Book Now!</a>
+                <a class="btn btn-lg btn-light" href="{% url 'booking' %}">Book Now!</a>
             </div>
         </header>
 
@@ -56,7 +54,7 @@
 
         <!-- Footer-->
         <footer class="py-5 bg-dark">
-            <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Your Website 2021</p></div>
+            <div class="container px-4"><p class="m-0 text-center text-white">Copyright &copy; Heather Hope 2022</p></div>
         </footer>
         
         <!-- Bootstrap core JS-->
