Checking heroku deployment

--- a/templates/base.html
+++ b/templates/base.html
@@ -8,9 +8,8 @@
         <meta name="description" content="" />
         <meta name="author" content="" />
         <title>Heather Hope Camping</title>
-        <!-- <link rel="icon" type="image/x-icon" href="{% static 'assets/css/style.css' %}" /> -->
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link  rel="stylesheet" href="{% static 'assets/css/style.css' %}" />
+        <link  rel="stylesheet" href="{% static '/assets/css/style.css' %}" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
