--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,7 @@
         <meta name="author" content="" />
         <title>Heather Hope Camping</title>
         <!-- Core theme CSS (includes Bootstrap)-->
-        <link  rel="stylesheet" href="{% static '/assets/css/style.css' %}" />
+        <link  rel="stylesheet" href="{% static 'assets/css/style.css' %}" />
     </head>
     <body id="page-top">
         <!-- Navigation-->
