--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -12,7 +12,7 @@
         <div class="col-md-8 mt-3 offset-md-2">
             <h3>{% trans "Sign In" %}</h3>
 
-            <p>{% blocktrans %}Welcome to Heather Hope Camping, to make a booking please log in. 
+            <p>{% blocktrans %}Welcome to Heather Hope Camping, to make a booking please log in. <br>
                 If have not created an account yet, then <a class="link" href="{{ signup_url }}">sign up</a>
                 first.{% endblocktrans %}</p>
         </div>
