--- a/templates/base.html
+++ b/templates/base.html
@@ -73,7 +73,7 @@
     <!-- Footer-->
     <footer class="py-2 fixed-bottom">
         <div class="container px-4">
-            <p class="m-0 text-center text-white">Copyright &copy; Heather Hope 2022</p>
+            <p class="m-0 text-center text-hhwhite footer-text">Copyright &copy; Heather Hope 2022</p>
         </div>
     </footer>
 
