--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -6,26 +6,26 @@
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block content %}
-
-<div class="container">
-    <div class="row">
-        <div class="col-md-8 mt-3 offset-md-2">
+<div class="overlay"></div>
+<div class="container pt-5">
+    <div class="row pt-5">
+        <div class="col-md-8 mt-3 offset-md-2 text-center">
             <h3>{% trans "Sign In" %}</h3>
 
-            <p>{% blocktrans %}Welcome to Heather Hope Camping, to make a booking please log in. <br>
+            <p>{% blocktrans %}Welcome to Heather Hope Camping, to make a booking please log in. <br><br>
                 If have not created an account yet, then <a class="link" href="{{ signup_url }}">sign up</a>
                 first.{% endblocktrans %}</p>
         </div>
     </div>
     <div class="row">
         <div class="col-md-8 mt-3 offset-md-2">
-            <form class="login" method="POST" action="{% url 'account_login' %}">
+            <form class="login text-center" method="POST" action="{% url 'account_login' %}">
                 {% csrf_token %}
                 {{ form.as_p }}
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
-                <button class="btn btn-signup right" type="submit">{% trans "Sign In" %}</button>
+                <button class="btn cta-btn text-hhwhite" type="submit">{% trans "Sign In" %}</button>
             </form>
         </div>
     </div>
