--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -5,8 +5,9 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<div class="container">
-  <div class="row">
+<div class="overlay"></div>
+<div class="container pt-5">
+  <div class="row pt-5">
     <div class="col-md-8 mt-3 offset-md-2">
       <h3>{% trans "Sign Out" %}</h3>
       <p>{% trans 'Are you sure you want to sign out?' %}</p>
@@ -16,12 +17,12 @@
   <div class="container">
     <div class="row">
       <div class="col-md-8 mt-3 offset-md-2">
-        <form method="post" action="{% url 'account_logout' %}">
+        <form method="post" action="{% url 'account_logout' %}" class="text-center">
           {% csrf_token %}
           {% if redirect_field_value %}
           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
           {% endif %}
-          <button type="submit">{% trans 'Sign Out' %}</button>
+          <button class="btn cta-btn" type="submit">{% trans 'Sign Out' %}</button>
         </form>
       </div>
     </div>
