--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
 <div class="container-fluid pt-5">
     <div>
         <h2 class="text-center text-hhblack pt-5">Welcome To Heather Hope Camping</h2>
-        <p class="text-center text-hhblack py-4">Come and camp with us in the beautiful North York Moors</p>
+        <h4 class="text-center text-hhblack py-4">Come and camp with us in the beautiful North York Moors</h4>
     </div>
     <div class="button-wrapper text-center py-2">
         <a href="{% url 'booking' %}" class="btn btn-lg py-3 cta-btn text-hhwhite rounded-pill">
