--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -6,7 +6,7 @@
 
 {% block content %}
 <div class="overlay"></div>
-<div class="container pt-5">
+<div class="container pt-5 text-center">
   <div class="row pt-5">
     <div class="col-md-8 mt-3 offset-md-2">
       <h3>{% trans "Sign Out" %}</h3>
