--- a/templates/booking.html
+++ b/templates/booking.html
@@ -3,6 +3,7 @@
 {% load crispy_forms_tags %}
 
 <!-- About section-->
+<div class="overlay"></div>
 <section id="about">
     <div class="container px-4">
         <div class="row gx-4 justify-content-center">
@@ -12,17 +13,29 @@
                         <p>That date range is unavailable, please choose another</p>
                     {% endif %}
                 <h3>Make a booking:</h3>
-                <form method="POST" style="margin-top: 1.3em;">
+                <form method="POST" class="text-center text-hhblack pt-5">
                     {{ booking_form | crispy }}
                     {% csrf_token %}
-                    <button type="submit" value="ok" class="btn btn-signup btn-lg">Submit
+                    <button type="submit" value="ok" class="btn cta-btn text-hhwhite">Submit
                     </button>
                 </form>
             
                 {% else %}
-                <h3>You need to sign up before you can make a booking</h3>
-                <a href="{% url 'account_signup' %}">Sign Up</a>
-                <a href="{% url 'account_login' %}">Login</a>
+                <div class="col-12 pt-5 text-center">
+                <h3 class="pt-5">You need to sign up before you can make a booking</h3>
+                <a href="{% url 'account_signup' %}" class="btn">
+                    <span class="icon">
+                        <i class="fas fa-chevron-left"></i>
+                    </span>
+                    <span>Sign Up</span>
+                </a>
+                <a href="{% url 'account_login' %}" class="btn">
+                    <span class="">Login</span>
+                    <span class="icon">
+                        <i class="fas fa-chevron-right"></i>
+                    </span>
+                </a>
+                </div>
                 {% endif %}
             </div>
         </div>
