Booking history template, view, url, model, style complete

--- a/templates/booking_success.html
+++ b/templates/booking_success.html
@@ -17,8 +17,8 @@
                 </span>
                 <span class="">Return Home</span>
             </a>
-            <a href="{% url 'booking' %}" class="btn mt-2 mb-5">
-                <span class="">Book Again</span>
+            <a href="{% url 'booking_history' %}" class="btn mt-2 mb-5">
+                <span class="">See Bookings</span>
                 <span class="icon">
                     <i class="fas fa-chevron-right"></i>
                 </span>
