--- a/templates/base.html
+++ b/templates/base.html
@@ -50,6 +50,9 @@
                     <li class="nav-item">
                         <a class="nav-link text-hhwhite" href="{% url 'account_logout' %}">Logout</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link text-hhwhite" href="{% url 'booking_history' %}">Bookings</a>
+                    </li>
                     {% else %}
                     <li class="nav-item">
                         <a class="nav-link text-hhwhite" href="{% url 'account_signup' %}">Register</a>
