Add messages for updating and deleting bookings

--- a/templates/booking.html
+++ b/templates/booking.html
@@ -5,8 +5,8 @@
 <!-- About section-->
 <div class="overlay"></div>
 <section id="about">
-    <div class="container px-4 pt-5">
-        <div class="row gx-4 justify-content-center pt-5">
+    <div class="container px-4 mt-5">
+        <div class="row gx-4 justify-content-center mt-5">
             <div class="col-lg-8">
                 {% if user.is_authenticated %}
                     {% if unavailable %}
