--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,19 @@
         </div>
     </nav>
 
+    <div class="container mt-5">
+        <div class="row mt-5">
+            <div class="col-md-8 offset-md-2 mt-5">
+                {% for message in messages %}
+                <div class="alert {{ message.tags }} alert-dismissible fade show text-center" id="msg" role="alert">
+                    {{ message | safe }}
+                    <button type="button" class="close" data-bs-dismiss="alert" aria-label="Close"></button>
+                </div>
+                {% endfor %}
+            </div>
+        </div>
+    </div>
+
     <main class="flex-shrink-0 main-bg">
         {% block content %}
         <!-- Content Goes here -->
@@ -83,3 +96,11 @@
 </body>
 
 </html>
+
+<script>
+    setTimeout(function () {
+        let messages = document.getElementById('msg');
+        let alert = new bootstrap.Alert(messages);
+        alert.close();
+    }, 2500);
+</script>
