--- a/templates/booking_history.html
+++ b/templates/booking_history.html
@@ -4,8 +4,8 @@
 
 <!-- About section-->
 <section id="about">
-    <div class="container pt-5">
-        <div class="row pt-5">
+    <div class="container mt-2">
+        <div class="row">
             <div class="col-12">
                 <h2 class="text-center">Booking History</h2>
             </div>
