--- a/templates/booking_history.html
+++ b/templates/booking_history.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
+{% load static %}
 {% block content %}
 {% load crispy_forms_tags %}
 
-<!-- About section-->
-<section id="about">
+<section id="booking-history">
     <div class="container mt-2">
         <div class="row">
             <div class="col-12">
