--- a/templates/delete_check.html
+++ b/templates/delete_check.html
@@ -5,22 +5,46 @@
 {% endblock %}
 
 {% block content %}
-<div class="container-fluid pt-5">
-    <div>
-        <h2 class="text-center text-hhblack pt-5">Are you sure you want to cancel your booking?</h2>
-        <h4 class="text-center text-hhblack py-4">We will surely miss having your company!</h4>
-    </div>
-    <div class="button-wrapper text-center py-2">
-        <p>{{ booking }}</p>
-        <form method="POST" action="{% url 'booking_delete' booking.booking_id %}">
+<section id="delete-booking">
+    <div class="container mt-2">
+        <div class="row">
+            <div class="col-12">
+                <h2 class="text-center text-hhblack pt-5">Are you sure you want to cancel your booking?</h2>
+                <h4 class="text-center text-hhblack py-4">We will surely miss having your company!</h4>
+            </div>
+        </div>
+        <div class="table-responsive d-flex justify-content-center">
+            <table class="table table-striped text-center table-sm w-75">
+                <thead class="thead-dark">
+                    <th>Pitch Type</th>
+                    <th>Date From</th>
+                    <th>Date To</th>
+                </thead>
+                <tbody>
+                    <tr>
+                        <td>
+                            {{ booking.pitch_type }}
+                        </td>
+                        <td>
+                            {{ booking.date_from }}
+                        </td>
+                        <td>
+                            {{ booking.date_to }}
+                        </td>
+                    </tr>
+                </tbody>
+            </table>
+        </div>
+
+        <form method="POST" action="{% url 'booking_delete' booking.booking_id %}" class="d-flex justify-content-around">
             {% csrf_token %}
-            <a href="{% url 'booking_history' %}" class="btn btn-lg py-3 cta-btn text-hhwhite text-uppercase">
+            <a href="{% url 'booking_history' %}" class="btn cta-btn mt-2 mb-5 text-hhwhite text-uppercase">
                 Return
             </a>
-            <input type="submit" name="Confirm" class="btn btn-lg py-3 cta-btn text-hhwhite text-uppercase"></input>
+            <button type="submit" name="Confirm" class="btn btn-danger mt-2 mb-5 text-hhwhite text-uppercase">Cancel Booking</button>
         </form>
-        
-    </div>
-</div>
 
+    </div>
+    </div>
+</section>
 {% endblock %}
