--- a/static/assets/css/base.css
+++ b/static/assets/css/base.css
@@ -13,7 +13,7 @@ html {
 
 
 body {
-    background: url('media/background_image.jpg') no-repeat center center fixed;
+    background:url('/static/assets/images/background_image.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
