--- a/templates/base.html
+++ b/templates/base.html
@@ -35,7 +35,7 @@
     <title>Heather Hope Camping</title>
 </head>
 
-<body>
+<body style="background: url("{$ static 'assets/images/background_image.jpg' $}") no-repeat center center fixed, background-size: cover, height: calc(100vh - 164px)">
     <header class="container-fluid fixed-top"></header>
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
