Added style to html to see if background image will work with heroku

--- a/templates/base.html
+++ b/templates/base.html
@@ -34,8 +34,13 @@
 
     <title>Heather Hope Camping</title>
 </head>
+<style>
+    body {
+        background: url("{% static 'assets/images/background_image.jpg '%}") no-repeat center center fixed;
+    }
+</style>
 
-<body style="background: url('{% static "assets/images/background_image.jpg" %}') no-repeat center center fixed, background-size: cover, height: calc(100vh - 164px)">
+<body>
     <header class="container-fluid fixed-top"></header>
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
