--- a/static/assets/css/base.css
+++ b/static/assets/css/base.css
@@ -13,7 +13,8 @@ html {
 
 
 body {
-    background-size: cover; 
+    background: url('https://heatherhope-camping.s3.eu-west-2.amazonaws.com/static/assets/images/background_image.jpg') no-repeat center center fixed;
+    background-size: cover;
     height: calc(100vh - 164px);
     color: #555;
     font-family: 'Lato';
