--- a/templates/booking.html
+++ b/templates/booking.html
@@ -3,7 +3,7 @@
 {% load crispy_forms_tags %}
 
 <!-- About section-->
-<div class="overlay"></div>
+<div class="accent2-overlay"></div>
 <section id="about">
     <div class="container px-4 mt-5">
         <div class="row gx-4 justify-content-center mt-5">
@@ -12,8 +12,8 @@
                     {% if unavailable %}
                         <p>That date range is unavailable, please choose another</p>
                     {% endif %}
-                <h3>Make a booking:</h3>
-                <form method="POST" class="text-center text-hhblack pt-5">
+                <h3 class="text-hhwhite">Make a booking:</h3>
+                <form method="POST" class="text-center text-hhwhite pt-5">
                     {% csrf_token %}
                     {{ booking_form.customer_id.as_hidden }}
                     {{ booking_form.pitch_type | as_crispy_field }}
@@ -25,19 +25,22 @@
             
                 {% else %}
                 <div class="col-12 pt-5 text-center">
-                <h3 class="pt-5">You need to sign up before you can make a booking</h3>
-                <a href="{% url 'account_signup' %}" class="btn">
-                    <span class="icon">
-                        <i class="fas fa-chevron-left"></i>
-                    </span>
-                    <span>Sign Up</span>
-                </a>
-                <a href="{% url 'account_login' %}" class="btn">
-                    <span class="">Login</span>
-                    <span class="icon">
-                        <i class="fas fa-chevron-right"></i>
-                    </span>
-                </a>
+                    <h3 class="text-hhblack text-weight-bold">You need to sign up before you can make a booking
+                    </h3>
+                    <div class="col-12 d-flex justify-content-around mt-4">
+                        <a href="{% url 'account_signup' %}" class="btn redirect-btn text-hhwhite">
+                            <span class="icon">
+                                <i class="fas fa-chevron-left"></i>
+                            </span>
+                            <span>Sign Up</span>
+                        </a>
+                        <a href="{% url 'account_login' %}" class="btn redirect-btn text-hhwhite">
+                            <span class="">Login</span>
+                            <span class="icon">
+                                <i class="fas fa-chevron-right"></i>
+                            </span>
+                        </a>
+                    </div>
                 </div>
                 {% endif %}
             </div>
