--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -6,14 +6,14 @@
 {% block head_title %}{% trans "Sign In" %}{% endblock %}
 
 {% block content %}
-<div class="overlay"></div>
-<div class="container pt-5">
-    <div class="row pt-5">
+<div class="accent1-overlay"></div>
+<div class="container pt-5 text-hhwhite">
+    <div class="row">
         <div class="col-md-8 mt-3 offset-md-2 text-center">
             <h3>{% trans "Sign In" %}</h3>
 
             <p>{% blocktrans %}Welcome to Heather Hope Camping, to make a booking please log in. <br><br>
-                If have not created an account yet, then <a class="link" href="{{ signup_url }}">sign up</a>
+                If have not created an account yet, then <a class="text-hhblack" href="{{ signup_url }}">sign up</a>
                 first.{% endblocktrans %}</p>
         </div>
     </div>
@@ -25,7 +25,7 @@
                 {% if redirect_field_value %}
                 <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
                 {% endif %}
-                <button class="btn cta-btn text-hhwhite" type="submit">{% trans "Sign In" %}</button>
+                <button class="btn btn-dark text-hhwhite" type="submit">{% trans "Sign In" %}</button>
             </form>
         </div>
     </div>
