--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -5,10 +5,10 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<div class="overlay"></div>
+<div class="accent1-overlay"></div>
 <div class="container pt-5 text-center">
   <div class="row pt-5">
-    <div class="col-md-8 mt-3 offset-md-2">
+    <div class="col-md-8 mt-3 offset-md-2 text-hhwhite">
       <h3>{% trans "Sign Out" %}</h3>
       <p>{% trans 'Are you sure you want to sign out?' %}</p>
     </div>
@@ -22,7 +22,7 @@
           {% if redirect_field_value %}
           <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
           {% endif %}
-          <button class="btn cta-btn" type="submit">{% trans 'Sign Out' %}</button>
+          <button class="btn btn-dark text-hhwhite" type="submit">{% trans 'Sign Out' %}</button>
         </form>
       </div>
     </div>
