--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<div class="overlay"></div>
+<div class="accent1-overlay"></div>
 <div class="container pt-5">
   <div class="row pt-5">
     <div class="col-md-8 mt-3 offset-md-2 text-center">
