--- a/templates/base.html
+++ b/templates/base.html
@@ -97,10 +97,10 @@
 
 </html>
 
-<script>
+<!-- <script>
     setTimeout(function () {
         let messages = document.getElementById('msg');
         let alert = new bootstrap.Alert(messages);
         alert.close();
     }, 2500);
-</script>
+</script> -->
