--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -8,22 +8,22 @@
 <div class="accent1-overlay"></div>
 <div class="container pt-5">
   <div class="row pt-5">
-    <div class="col-md-8 mt-3 offset-md-2 text-center">
+    <div class="col-md-8 mt-3 offset-md-2 text-center text-hhwhite">
       <h3>{% trans "Sign Up" %}</h3>
 
-      <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}
+      <p>{% blocktrans %}Already have an account? Then please <a href="{{ login_url }}" class="text-hhblack">sign in</a>.{% endblocktrans %}
       </p>
     </div>
   </div>
   <div class="row">
     <div class="col-md-8 mt-3 offset-md-2">
-      <form class="signup text-center" id="signup_form" method="post" action="{% url 'account_signup' %}">
+      <form class="signup text-center text-hhwhite" id="signup_form" method="post" action="{% url 'account_signup' %}">
         {% csrf_token %}
         {{ form.as_p }}
         {% if redirect_field_value %}
         <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
         {% endif %}
-        <button class="btn cta-btn text-hhwhite" type="submit">{% trans "Sign Up" %} &raquo;</button>
+        <button class="btn btn-dark text-hhwhite" type="submit">{% trans "Sign Up" %} &raquo;</button>
       </form>
     </div>
   </div>
